<resources>
    <string name="app_name">DZ_1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="secondfragment">SecondFragment</string>
    <string name="thirdfragment">ThirdFragment</string>
    <string name="Home">home2</string>
    <string name="enter">Enter</string>
    <string name="not_data">Данные не пришли</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="send">send</string>
    <string name="name2">Name:</string>
    <string name="meaningname">meaningName</string>
    <string name="email2">Email:</string>
    <string name="meaning_email">Meaning_email</string>
    <string name="password2">Password:</string>
    <string name="meaning_password">meaning_password</string>
</resources>